NEW: Integral in R^n

--- a/main.tex
+++ b/main.tex
@@ -66,5 +66,7 @@
     \input{general.tex}
     \clearpage
     \input{./diffInRn.tex}
+    \clearpage
+    \input{./intInRn.tex}
 \end{multicols*}
 \end{document}
