--- a/master.tex
+++ b/master.tex
@@ -1,5 +1,50 @@
 \documentclass[a4paper]{report}
-\input{../../preamble.tex}
+
+% Some basic packages
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[english]{babel}
+
+\usepackage{hyperref}
+\usepackage{enumitem}
+
+% Image
+\usepackage{graphicx}
+\graphicspath{{Figures/}}
+\usepackage{float}
+
+\usepackage{parskip}
+
+\usepackage{xcolor}
+
+\newcommand{\todo}[1]{\textcolor{red}{TODO: #1}\PackageWarning{TODO:}{#1!}}
+
+\definecolor{codegray}{gray}{0.9}
+\newcommand{\code}[1]{\colorbox{codegray}{\texttt{#1}}}
+
+% Math
+\usepackage{amsmath, amssymb}
+
+\newcommand\N{\ensuremath{\mathbb{N}}}
+\newcommand\R{\ensuremath{\mathbb{R}}}
+\newcommand\Z{\ensuremath{\mathbb{Z}}}
+\newcommand\Q{\ensuremath{\mathbb{Q}}}
+\newcommand\C{\ensuremath{\mathbb{C}}}
+\newcommand\K{\ensuremath{\mathbb{K}}}
+\renewcommand\O{\ensuremath{\emptyset}}
+\newcommand{\notimplies}{\;\not\!\!\!\implies}
+
+% Code
+\usepackage{listings}
+
+% Lecture header
+\newcommand{\lecture}[3]{
+    \section{Lecture #1: #3}
+    \marginpar{\small\textsf{\mbox{#2}}}
+}
+
+% My name
+\author{Jean-Claude Graf}
 
 \title{Summary: System Programming and Computer Architectures}
 
