FIX: Rename master to main

--- a/lec_13.tex
+++ b/lec_13.tex
@@ -1,4 +1,4 @@
-%! TEX root = ./master.tex
+%! TEX root = ./main.tex
 
 \lecture{13}{Week 7}{Linking}
 When a project in split into multiple files \code{.c}, they are compiled independently into object files \code{.o}. The linker is then responsible for combining all object files into the final executable. The Unix linker is called \code{ld} but since gcc is actually a wrapper of many programs, it does also the linking part.
