--- a/lec_17.tex
+++ b/lec_17.tex
@@ -1,4 +1,4 @@
-%! TEX root = ./master.tex
+%! TEX root = ./main.tex
 
 \lecture{17}{Week 9}{Architecture and Optimisation}
 In this lecture we explore how code can be optimised based on the hardware on which it is run. These techniques are introduced based on the following benchmark code. It is composed of a \code{struct vec}, which represents a vector, \code{int get\_vec\_element()} which returns a certain element from the vector and the heavy-work method \code{combine()} which does multiply of add all elements of a given vector.
