--- a/lec_19.tex
+++ b/lec_19.tex
@@ -1,4 +1,4 @@
-%! TEX root = ./master.tex
+%! TEX root = ./main.tex
 
 \lecture{19}{Week 10}{Exception Handling in Processors}
 \paragraph{(Exceptional) Control Flow}
