--- a/lec_03.tex
+++ b/lec_03.tex
@@ -10,7 +10,7 @@ Operators and their precedence.
 \subsubsection{Assignment}
 Beside the ternary operator, assignment operators are the only operators which are right-to-left associative while all other operators are left-to-right associative.
 
-As said before, assignments are expressions to (unlike in most other languages).
+As said before, assignments are expressions too (unlike in most other languages).
 
 \subsubsection{Post-/Pre-Increment}
 They work as we are used to from Java. We can also apply them to pointers. In that case the pointer value is not incremented by one but by the size of the type of the pointer.
@@ -42,10 +42,10 @@ Multidimensional arrays are stored in row-major in a continuous array. Meaning t
 
 \includegraphics[width=0.8\textwidth]{03_multiDimArray.png}
 
-When viewed as a matrix, the first brackets defines the number of columns and the second bracket the number of rows.
+When viewed as a matrix, the first brackets defines the number of rows and the second bracket the number of columns.
 
 \subsubsection{Strings}
-There is no string type in C. Instead strings are an array of chars. The end of the array is marked by the null character \textbackslash 0. We could assign it directly as an array of chars \code{char arr[3] = \{'a', 'b', '\textbackslash 0'\}}. This way we must add the null character explicitly. It is often easier to assign the sting directly as \code{char arr[3]= "ab"}.
+There is no string type in C. Instead strings are an array of chars. The end of the array is marked by the null character \textbackslash 0. We could assign it directly as an array of chars \code{char arr[3] = \{'a', 'b', '\textbackslash 0'\}}. This way we must add the null character explicitly. It is often easier to assign the sting directly as \code{char arr[3]= "ab"}. Note, that anything enclosed by double quotes is considered a string while anything enclosed by single quotes is considered a char.
 
 Very important is that when setting the length of the array, we keep in mind that the null character requires some space too.
 
@@ -101,7 +101,7 @@ The behaviour of negative numbers and numbers larger then the vectors is undefin
 \subsubsection{Encoding}
 Unsigned integers are encoded in such a way, that with increasing position (LSB to MSB), the factor of two increases: $\sum_{i=0}^{w-1} x_i \cdot 2^i$.
 
-With two's complements encoding we have to consider that the MSB is the sign bit. If is set, $2^{w-1}$ is subtracted of the number represented by the last $w-2$ bits: $-w_{w - 1} \cdot 2^{w - 1} + \sum_{i=0}^{w - 2} x_i \cdot 2^i$.
+With two's complements encoding we have to consider that the MSB is the sign bit. If it is set, $2^{w-1}$ is subtracted of the number represented by the last $w-2$ bits: $-w_{w - 1} \cdot 2^{w - 1} + \sum_{i=0}^{w - 2} x_i \cdot 2^i$.
 
 \subsubsection{Ranges}
 \begin{itemize}
@@ -117,14 +117,14 @@ Depending on the word size of the number, we can represent different ranges:
 
 From this table we can notice two interesting things:
 \begin{enumerate}
-    \item $|\text{TMIN}| = |\text{TMAX} + 1$. I.e. we can represent one negative number more than positive (asymmetric range)
+    \item $|\text{TMIN}| = \text{TMAX} + 1$. I.e. we can represent one negative number more than positive (asymmetric range)
     \item UMAX $= 2 \cdot \text{TMAX} + 1$
 \end{enumerate}
 
 In practice, we can use \code{<limits.h>} which provides \code{ULONG\_MAX}, \code{LONG\_MAX}, \code{LONG\_MIN}... to get these bounds.
 
 \subsubsection{Visualisation}
-When comparing the interpreted signed/unsigned number of a certain bit patters, we see that for the lower halve of numbers, the signed and unsigned numbers are equivalent. Fur the other halve of numbers, i.e. all which have MSB of $1$, we have to add $2^{\text{word size}}$ to get from signed to unsigned. 
+When comparing the interpreted signed/unsigned number of a certain bit patters, we see that for the lower halve of numbers, the signed and unsigned numbers are equivalent. For the other halve of numbers, i.e. all which have MSB of $1$, we have to add $2^{\text{word size}}$ to get from signed to unsigned. 
 
 \includegraphics[width=0.8\textwidth]{03_signedUnsignedMap.png}
 
