--- a/lec_04.tex
+++ b/lec_04.tex
@@ -63,24 +63,24 @@ $TAdd$ is isomorphic to $UAdd$ and $TAdd$ forms a group (closed, commutative, as
 \paragraph{Unsigned Multiplication}
 When multiplying two unsigned numbers $u$ and $v$ of length $w$, we get a number of length $2w$.
 
+So, we can get all number $0 \le x \cdot y \le (2^w -1)^2$.
+
 \includegraphics[width=0.8\textwidth]{04_unsignedMultiplyEquation.png}
 
 The operator $UMult_w(u,v)$ truncates the overflowing bits. The formula can be seen as:
 
 \includegraphics[width=0.8\textwidth]{04_unsignedMultiplyFormula.png}
 
-In order that the product is exact $x$ and $y$ must satisfy $0 \le x \cdot y \le (2^w -1)^2$
-
-$UMULt_w$ forms a commutative ring with $UAdd$.
+$UMult_w$ forms a commutative ring with $UAdd$.
 
 \paragraph{Signed Multiplication}
 When multiplying two signed numbers $u$ and $v$ of length $w$, we get a number of length $2w$.
 
+We can represent the range $(-2^{w - 1}) \cdot (2^{w - 1} - 1) \le x \cdot y \le (-2^{w -1})^2$.
+
 \includegraphics[width=0.8\textwidth]{04_signedMultiplicationEquation.png}
 
 The operator $TMult_w(u,v)$ ignores the overflowing bits. Some hardware puts overflowing bits into a special register, but they are normally not accessibly in C.
-
-The minimal product which can be represented accurately is $x \cdot y \ge (-2^{w - 1}) \cdot (2^{w - 1} - 1)$. And the greatest number is $x \cdot y \le (-2^{w -1})^2$.
 
 \subsubsection{Multiplication and Division Using Shifts}
 \paragraph{Multiplication}
@@ -97,8 +97,8 @@ Equally as with multiplication, shifts can be used for division of power of twos
 
 \includegraphics[width=0.8\textwidth]{04_powerOfTwoDivide.png}
 
-Even though this works for unsigned and signed numbers, for signed numbers the results may be wrong for negative numbers. 
-This is because we round down, but actually we would like to round towards $0$. We can fix that by computing $\lfloor \frac{(s + 2^k - 1)}{2^k} \rfloor$. In C this is equivalent to $(s + (1 << k) -1) >> k$. This formula works for positive and negative numbers.
+Even though this works for unsigned and signed numbers, for signed numbers the results may be wrong for negative numbers.
+This is because we round down, but actually we would like to round towards $0$. We can fix that by computing $\lfloor \frac{(u + 2^k - 1)}{2^k} \rfloor$. In C this is equivalent to $(u + (1 << k) -1) >> k$. This formula works for positive and negative numbers.
 
 \includegraphics[width=0.8\textwidth]{04_powerOfTwoDivideCorrect.png}
 
